--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-    "name": "hello-world",
-    "description": "Sample NodeJs web application",
-    "version": "0.0.1",
-    "private": true,
-    "devDependencies": {
-        "mocha": "5.0.0",
-        "unit.js": "2.0.0"
-    },
-    "scripts": {
-        "test": "mocha --recursive tests"
-    }
+  "name": "github-create-thumbnail",
+  "version": "0.0.1",
+  "description": "AWS Lambda function to create an image thumbnail",
+  "main": "index.js",
+  "dependencies": {
+    "async": "^0.9.0",
+    "gm": "^1.17.0",
+    "grunt": "^1.0.1",
+    "grunt-aws-lambda": "^0.13.0",
+    "grunt-mocha-test": "^0.13.3",
+    "imagemagick": "^0.1.3",
+    "mocha": "^4.0.1"
+  },
+  "devDependencies": {
+    "aws-sdk": "latest",
+    "npm": "^2.8.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "awsoctocat",
+  "License": "Apache-2.0"
 }
